Envio de arquivos e otimização ao salvar imágens

--- a/aula006/index.html
+++ b/aula006/index.html
@@ -6,13 +6,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Curso DOM aula 06</title>
+    <style>
+        img {
+            width: 300px;
+        }
+    </style>
 </head>
 
-<style>
-    img {
-        width: 300px;
-    }
-</style>
 
 <body>
 
@@ -32,7 +32,7 @@
             aspernatur eveniet vel?</p>
     </div>
 
-    <img src="./news_02.jpg" alt="Imagem news 02" id="noticias-02">
+    <img src="../imagens/news_02.png" alt="Imagem news 02" id="noticias-02">
 
     <!-- JavaScript -->
     <script src="./js/script.js"></script>
